Melhorias nas rotas
